--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.4.5",
     "@material-ui/core": "^4.12.4",
     "@material-ui/data-grid": "^4.0.0-alpha.37",
-    "@reduxjs/toolkit": "^2.5.1",
+    "@mui/material": "^6.4.5",
+    "@mui/x-data-grid": "^7.27.0",
+    "@paypal/react-paypal-js": "^8.8.2",
+    "@reduxjs/toolkit": "^1.9.3",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.6.0",
     "@tailwindcss/vite": "^4.0.8",
@@ -32,8 +34,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.3",
-    "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "redux-toolkit": "^1.1.2",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.8",
